INT-6638,INT-6512: Make collapsed search fix apply to any page

--- a/less/moodle/admin.less
+++ b/less/moodle/admin.less
@@ -23,7 +23,7 @@
     }
 }
 
-.path-enrol-manual #userselector_options.collapsed{
+#userselector_options.collapsed{
     height: inherit;
     min-height: 2em;
 }
